feat: Add GridImage component and integrate into GallerySection and MagentiaSection

--- a/src/pages/mangrovia.astro
+++ b/src/pages/mangrovia.astro
@@ -1,29 +1,8 @@
 ---
-import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
 import Button from "../components/Button.astro";
-import CloseSvg from "../components/CloseSvg.astro";
-import SubmitSvg from "../components/SubmitSvg.astro";
-
-import multiversoSrc from "../images/multiverso.png";
-import faxSrc from "../images/nutria-fax.png";
-import tabSrc from "../images/tab-tab-tab.png";
-import bestemmieSrc from "../images/bestemmie-comasche.png";
-import superSrc from "../images/super-fiorenzo.png";
-import meteoriteSrc from "../images/adriano-meteorite.png";
-import criminiSrc from "../images/crimini-frontend.png";
-import sindacoSrc from "../images/sindaco-sala.png";
-import cleanSrc from "../images/clean-code.png";
-import monacheSrc from "../images/le-monache.png";
-import adrianiSrc from "../images/gli-adriani.png";
-import economicoSrc from "../images/economico-programmatore.png";
-import rabbiaSrc from "../images/rabbia.png";
-import nuovoSrc from "../images/nuovo-team.png";
-import quitsSrc from "../images/luca-quits.png";
-import lunchSrc from "../images/lunch-break.png";
-import whatSrc from "../images/what.png";
-import backendSrc from "../images/backend.png";
-import frontendSrc from "../images/frontendisti-calabresi.png";
+import GallerySection from "../layouts/GallerySection.astro";
+import MagentiaSection from "../layouts/MagentiaSection.astro";
 ---
 
 <Layout title="Luca Farewell Multiverse" description="Attenti a non esagerare con gli Agenti AI">
@@ -31,353 +10,6 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
     <Button href="/spotify" fw="bold" size="sm">🎹<span class="hidden sm:inline">&nbsp;&nbsp;La playlist</span></Button>
     <Button href="/" fw="bold" size="sm" primary>Dona<span class="hidden sm:inline"> ora</span></Button>
   </Fragment>
-  <div class="pt-3 overflow-hidden relative">
-    <div class="grid grid-gap-4 border-collapse">
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={multiversoSrc}
-          alt="Multiverso Mangrovia"
-          title="Multiverso Mangrovia"
-          width={1536}
-          height={1024}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-    </div>
-    <div class="grid grid-cols-3 gap-0">
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={tabSrc}
-          alt="TAB TAB TAB TAB!!!"
-          title="TAB TAB TAB TAB!!!"
-          width={1024}
-          height={1024}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={faxSrc}
-          alt="Commit via Fax"
-          title="Commit via Fax"
-          width={1024}
-          height={1024}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={bestemmieSrc}
-          alt="Bestemmie in comasco"
-          title="Bestemmie in comasco"
-          width={1024}
-          height={1024}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-    </div>
-    <div class="grid grid-cols-4 gap-0">
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={superSrc}
-          alt="Super Fiorenzo"
-          title="Super Fiorenzo"
-          width={1024}
-          height={1536}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={quitsSrc}
-          alt="Adriano faints, Luca quits"
-          title="Adriano faints, Luca quits"
-          width={1024}
-          height={1536}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={whatSrc}
-          alt="Che cosa sta succedendo?"
-          title="Che cosa sta succedendo?"
-          width={1024}
-          height={1536}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={meteoriteSrc}
-          alt="Adriano abbattuto da un meteorite"
-          title="Adriano abbattuto da un meteorite"
-          width={1024}
-          height={1536}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-    </div>
-    <div class="grid grid-cols-3 gap-0">
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={sindacoSrc}
-          alt="Prendi il sindaco"
-          title="Prendi il sindaco"
-          width={1536}
-          height={1024}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={cleanSrc}
-          alt="Clean Code e bestemmie"
-          title="Clean Code e bestemmie"
-          width={1536}
-          height={1024}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={monacheSrc}
-          alt="Fare schifo dalle Monache"
-          title="Fare schifo dalle Monache"
-          width={1536}
-          height={1024}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-    </div>
-    <div class="grid grid-cols-4 gap-0">
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={adrianiSrc}
-          alt="Adriano, la serie"
-          title="Adriano, la serie"
-          width={1024}
-          height={1024}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={economicoSrc}
-          alt="Economico Programmatore"
-          title="Economico Programmatore"
-          width={1024}
-          height={1024}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={rabbiaSrc}
-          alt="RABBIA!!"
-          title="RABBIA!!"
-          width={1024}
-          height={1024}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={nuovoSrc}
-          alt="Il nuovo team di Frontend"
-          title="Il nuovo team di Frontend"
-          width={1024}
-          height={1024}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-    </div>
-    <div class="grid grid-cols-3 gap-0">
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={criminiSrc}
-          alt="Tribunale dei Crimini Frontend"
-          title="Tribunale dei Crimini Frontend"
-          width={1536}
-          height={1024}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={lunchSrc}
-          alt="Lunch Break Deluxe"
-          title="Lunch Break Deluxe"
-          width={1536}
-          height={1024}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-      <div class="border-2 border-mang overflow-hidden">
-        <Image
-          src={backendSrc}
-          alt="È un bug del backend"
-          title="È un bug del backend"
-          width={1536}
-          height={1024}
-          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-          loading="lazy"
-          decoding="async"
-        />
-      </div>
-    </div>
-  </div>
-  <div class="sticky bottom-26 z-20">
-    <div class="mx-auto max-w-xl px-4 py-3 flex flex-col gap-2 items-center justify-center">
-      <p id="query" class="hidden bg-secondary rounded-xl text-black/80 px-2 pt-1 pb-2 w-fit ml-auto"></p>
-      <div id="response-ko" class="hidden w-full overflow-hidden">
-        <p class="bg-neutral-200 rounded-xl text-black/90 px-2 pt-1 pb-3">
-          Non ho informazioni nel sistema per rispondere alla tua domanda.
-        </p>
-      </div>
-      <div id="response-ok" class="hidden">
-        <div class="flex flex-col gap-2">
-          <p class="bg-neutral-200 rounded-xl text-black/90 px-2 py-1">
-            Ecco <span class="font-mono text-black/70 text-sm bg-black/5">frontendisti-calabresi.png</span>
-          </p>
-          <div class="rounded-xl w-10/12 overflow-hidden">
-            <Image
-              src={frontendSrc}
-              alt="Frontendisti calabresi"
-              title="Frontendisti calabresi"
-              width={1536}
-              height={1024}
-              class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
-              loading="lazy"
-              decoding="async"
-            />
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="sticky bottom-8 z-30">
-    <div class="mx-auto max-w-xl px-4 py-3 flex items-center justify-center">
-      <div class="bg-white relative rounded-3xl w-full overflow-hidden">
-        <input
-          id="magentia"
-          class="shadow appearance-none w-full py-3 px-4 text-black/90 leading-tight focus:outline-none focus:shadow-outline"
-          placeholder="Cerca nell'archivio delle immagini..."
-          type="text"
-          tabindex="1"
-          autofocus
-          autocomplete="off"
-        />
-        <div class="absolute right-2 top-2 z-10">
-          <button
-            id="close-button"
-            class="hidden bg-white/80 bg-secondary-hover rounded-full p-1 text-black transition-colors cursor-pointer"
-            ><CloseSvg /></button
-          >
-          <button
-            id="submit"
-            class="bg-primary bg-secondary-hover rounded-full p-1 text-black transition-colors cursor-pointer"
-            ><SubmitSvg /></button
-          >
-        </div>
-        <div id="loader" class="hidden absolute w-full h-full bg-white animate-pulse top-0 left-0 z-20"></div>
-      </div>
-    </div>
-  </div>
+  <GallerySection />
+  <MagentiaSection />
 </Layout>
-
-<script>
-  const input = document.getElementById("magentia") as HTMLInputElement;
-  const button = document.getElementById("submit") as HTMLButtonElement;
-  const loader = document.getElementById("loader") as HTMLDivElement;
-  const queryBox = document.getElementById("query") as HTMLDivElement;
-  const responseOk = document.getElementById("response-ok") as HTMLDivElement;
-  const responseKo = document.getElementById("response-ko") as HTMLDivElement;
-  const closeButton = document.getElementById("close-button") as HTMLButtonElement;
-
-  input.addEventListener("keydown", (event) => {
-    if (event.key === "Enter") {
-      submitQuery(input.value);
-    }
-    if (event.key === "Escape") {
-      closeChat();
-    }
-  });
-  button.addEventListener("click", () => {
-    submitQuery(input.value);
-  });
-  closeButton.addEventListener("click", () => {
-    closeChat();
-  });
-
-  function submitQuery(query: string) {
-    console.log("Submit query:", query);
-
-    if (query.trim().length > 0) {
-      queryBox.textContent = query;
-      loader.classList.remove("hidden");
-      responseKo.classList.add("hidden");
-      responseOk.classList.add("hidden");
-      queryBox.classList.remove("hidden");
-      input.value = "";
-
-      setTimeout(
-        () => {
-          loader.classList.add("hidden");
-          closeButton.classList.remove("hidden");
-          if (
-            query.toLocaleLowerCase().includes("calabr") ||
-            query.toLocaleLowerCase().includes("frontendist") ||
-            query.toLocaleLowerCase().includes("fiore")
-          ) {
-            responseOk.classList.remove("hidden");
-          } else {
-            responseKo.classList.remove("hidden");
-          }
-        },
-        500 + Math.random() * 1000
-      );
-    }
-  }
-
-  function closeChat() {
-    responseOk.classList.add("hidden");
-    responseKo.classList.add("hidden");
-    queryBox.classList.add("hidden");
-    closeButton.classList.add("hidden");
-  }
-</script>
