fix: Update titles for GridImage components in GallerySection

--- a/src/layouts/GallerySection.astro
+++ b/src/layouts/GallerySection.astro
@@ -34,10 +34,10 @@ import backendSrc from "../images/backend.png";
     <GridImage src={superSrc} title="Super Fiorenzo" width={1024} height={1536} />
     <GridImage src={quitsSrc} title="Adriano faints, Luca quits" width={1024} height={1536} />
     <GridImage src={whatSrc} title="Che cosa sta succedendo?" width={1024} height={1536} />
-    <GridImage src={meteoriteSrc} title="Adriano abbattuto da un meteorite" width={1024} height={1536} />
+    <GridImage src={meteoriteSrc} title="La nona ora" width={1024} height={1536} />
   </div>
   <div class="grid grid-cols-3 gap-0">
-    <GridImage src={sindacoSrc} title="Prendi il sindaco" width={1536} height={1024} />
+    <GridImage src={sindacoSrc} title="Sindaco Salaaaaa" width={1536} height={1024} />
     <GridImage src={cleanSrc} title="Clean Code e bestemmie" width={1536} height={1024} />
     <GridImage src={monacheSrc} title="Fare schifo dalle Monache" width={1536} height={1024} />
   </div>
@@ -48,8 +48,18 @@ import backendSrc from "../images/backend.png";
     <GridImage src={nuovoSrc} title="Il nuovo team di Frontend" width={1024} height={1024} />
   </div>
   <div class="grid grid-cols-3 gap-0">
-    <GridImage src={criminiSrc} title="Tribunale dei Crimini Frontend" width={1536} height={1024} />
-    <GridImage src={lunchSrc} title="Lunch Break Deluxe" width={1536} height={1024} />
+    <GridImage
+      src={criminiSrc}
+      title="Padre, ho fatto cose per le quali il Dio della Biomeccanica non ti farebbe entrare in Paradiso"
+      width={1536}
+      height={1024}
+    />
+    <GridImage
+      src={lunchSrc}
+      title="Mi costruirò un enorme luna park tutto mio con blackjack e squillo di lusso!"
+      width={1536}
+      height={1024}
+    />
     <GridImage src={backendSrc} title="È un bug del backend" width={1536} height={1024} />
   </div>
 </div>
