fix: Replace `bugg.png` with `nutria.png` in TiersSection

--- a/src/layouts/TiersSection.astro
+++ b/src/layouts/TiersSection.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import Button from "../components/Button.astro";
 
-import bugSrc from "../images/bugg.png";
+import bugSrc from "../images/nutria.png";
 import morelessSrc from "../images/moreless.png";
 import clevelSrc from "../images/clevel.png";
 
