fix: Update hover color for text-primary and text-secondary

--- a/src/layouts/FaqSection.astro
+++ b/src/layouts/FaqSection.astro
@@ -19,7 +19,7 @@ import faqs from "../data/faq.json";
                   href={link}
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="text-primary hover:text-black font-semibold no-underline"
+                  class="text-primary font-semibold no-underline text-primary-hover"
                 >
                   *
                 </a>
