--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -42,13 +42,13 @@ html {
   color: var(--color-primary);
 }
 .text-primary-hover:hover {
-  color: var(--color-primary);
+  color: var(--color-black);
 }
 .text-secondary {
   color: var(--color-secondary);
 }
 .text-secondary-hover:hover {
-  color: var(--color-secondary);
+  color: var(--color-black);
 }
 
 /* Ring colors */
