fix: Simplify loader structure and update text styling

--- a/src/layouts/MagentiaSection.astro
+++ b/src/layouts/MagentiaSection.astro
@@ -57,10 +57,8 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           ><SubmitSvg /></button
         >
       </div>
-      <div id="loader" class="hidden absolute top-0 left-0 right-0 bottom-0 z-20">
-        <div class="absolute bg-white top-0 left-0 right-0 bottom-0 animate-pulse"></div>
-        <div class="absolute bg-white top-0 left-0 right-11 bottom-0"></div>
-        <p class="py-3 px-4 text-black/90 leading-tight relative">Sto pensando...</p>
+      <div id="loader" class="hidden absolute top-0 left-0 right-0 bottom-0 z-20 bg-white">
+        <p class="py-3 px-4 text-black/70 leading-tight relative animate-pulse">Sto pensando...</p>
       </div>
     </div>
   </div>
